--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon</title> 
+    <!-- Renamed the page title -->
 </head>
 
+ <!-- Renamed the page title -->
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
